game area html hacked up

--- a/src/app/game/game.html
+++ b/src/app/game/game.html
@@ -1,21 +1,8 @@
-<div layout="vertical" layout-fill>
+<div layout="vertical" layout-fill ng-controller="gameController">
+  <p> is this working </p>
 
-  <header ng-include="'components/navbar/navbar.html'"></header>
-
-  <md-content>
-    <section class="jumbotron">
-      <h1>3D Maze Game!</h1>
-    </section>
-
-    <div class="techs" layout-align="center">
-     <div ui-view="game">
-     </div>
-    </div>
-  </md-content>
-
-  <footer>
-    <md-toolbar layout="row" layout-align="center center">
-    </md-toolbar>
-  </footer>
+  <div class="gameArea">
+    yes
+  </div>
 
 </div>
