working on wall placement

--- a/src/app/game/game.html
+++ b/src/app/game/game.html
@@ -1,8 +1,7 @@
 <div layout="vertical" layout-fill ng-controller="gameController">
-  <p> is this working </p>
 
   <div class="gameArea">
-    yes
+    <div ng-click="go()">Click to start</div>
   </div>
 
 </div>
