--- a/src/components/navbar/navbar.html
+++ b/src/components/navbar/navbar.html
@@ -4,7 +4,7 @@
   <section flex layout="row" layout-align="left center">
     <md-button href="#" class="md-raised">Home</md-button>
     <md-button href="#/game" class="md-raised">Play</md-button>
-    <md-button href="#" class="md-raised">Contact</md-button>
+    <md-button href="#/build" class="md-raised">Build a maze</md-button>
   </section>
 
 </md-toolbar>
