add multi cam, first pass at maze generation

--- a/src/app/game/game.html
+++ b/src/app/game/game.html
@@ -2,6 +2,9 @@
 <header ng-include="'components/navbar/navbar.html'"></header>
   <div class="gameArea">
     <div ng-click="go()">Click to start </div><span ng-model='score'> Elapsed time {{ score }}</span>
+    <input ng-model="choice" placeholder="enter a number"></input>
+     <button ng-click="func(choice)">Generate a maze</button>
+     <span ng-click="switch()">Switch Cameras</span>
   </div>
 
 </div>
