cleaned up interface slightly

--- a/src/app/game/game.html
+++ b/src/app/game/game.html
@@ -1,10 +1,9 @@
 <div layout="vertical" layout-fill ng-controller="gameController">
 <header ng-include="'components/navbar/navbar.html'"></header>
   <div class="gameArea">
-    <div ng-click="go()">Click to start </div><span ng-model='score'> Elapsed time {{ score }}</span>
+    <span ng-click="go()">Click to start </span>
     <input ng-model="choice" placeholder="enter a number"></input>
      <button ng-click="func(choice)">Generate a maze</button>
-     <span ng-click="switch()">Switch Cameras</span>
   </div>
 
 </div>
